--- a/updatecli/updatecli.d/charts/accountapp.yaml
+++ b/updatecli/updatecli.d/charts/accountapp.yaml
@@ -30,9 +30,9 @@ targets:
       matchpattern: 'chart: jenkins-infra\/accountapp((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jenkins-infra/accountapp${1}version: {{ source "lastChartVersion" }}'
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump `accountapp` helm chart version to {{ source "lastChartVersion" }}
     spec:
