--- a/updatecli/updatecli.d/charts/aws-load-balancer-controller.yaml
+++ b/updatecli/updatecli.d/charts/aws-load-balancer-controller.yaml
@@ -31,9 +31,9 @@ targets:
       matchpattern: 'chart: eks\/aws-load-balancer-controller((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: eks/aws-load-balancer-controller${1}version: {{ source "lastChartVersion" }}'
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump `aws-load-balancer-controller` helm chart version to {{ source "lastChartVersion" }}
     spec:
