--- a/updatecli/updatecli.d/charts/github-comment-ops.yaml
+++ b/updatecli/updatecli.d/charts/github-comment-ops.yaml
@@ -30,9 +30,9 @@ targets:
       replacepattern: 'chart: github-comment-ops/github-comment-ops${1}version: {{ source "lastChartVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump `github-comment-ops` helm chart version to {{ source "lastChartVersion" }}
     spec:
