--- a/updatecli/updatecli.d/charts/jenkins.yaml
+++ b/updatecli/updatecli.d/charts/jenkins.yaml
@@ -33,9 +33,9 @@ targets:
       replacepattern: 'chart: jenkins/jenkins${1}version: {{ source "lastChartVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump `jenkins` helm chart version to {{ source "lastChartVersion" }}
     spec:
