--- a/updatecli/updatecli.d/charts/plugin-health-scoring.yaml
+++ b/updatecli/updatecli.d/charts/plugin-health-scoring.yaml
@@ -30,9 +30,9 @@ targets:
       replacepattern: 'chart: jenkins-infra/plugin-health-scoring${1}version: {{ source "lastChartVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump `plugin-health-scoring` helm chart version to {{ source `lastChartVersion` }}
     spec:
