chore(updatecli): update manifest to last schema version (#3372)
* chore(updatecli): update manifest to last schema version

* fix ext_jenkins-infra renaming

* comment out privatek8s for jenkins-jobs for now

--- a/updatecli/updatecli.d/charts/jenkins-agents-infra.ci.jenkins.io.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-agents-infra.ci.jenkins.io.yaml
@@ -77,7 +77,7 @@ targets:
     kind: file
     sourceid: getLatestUbuntuAgentAMIAmd64
     spec:
-      file: config/ext_jenkins-infra.yaml
+      file: config/ext_jenkins-infra__common.yaml
       matchpattern: '- ami: ".*"(.*)LINUXAMD64'
       replacepattern: '- ami: "{{ source `getLatestUbuntuAgentAMIAmd64` }}"${1}LINUXAMD64'
     scmid: default
@@ -86,7 +86,7 @@ targets:
     kind: file
     sourceid: getLatestUbuntuAgentAMIArm64
     spec:
-      file: config/ext_jenkins-infra.yaml
+      file: config/ext_jenkins-infra__common.yaml
       matchpattern: '- ami: ".*"(.*)LINUXARM64'
       replacepattern: '- ami: "{{ source `getLatestUbuntuAgentAMIArm64` }}"${1}LINUXARM64'
     scmid: default
@@ -95,14 +95,14 @@ targets:
     kind: file
     sourceid: getLatestWindowsAgentAMIAmd64
     spec:
-      file: config/ext_jenkins-infra.yaml
+      file: config/ext_jenkins-infra__common.yaml
       matchpattern: '- ami: ".*"(.*)WINDOWSAMD64'
       replacepattern: '- ami: "{{ source `getLatestWindowsAgentAMIAmd64` }}"${1}WINDOWSAMD64'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump agent templates for infra.ci.jenkins.io (packer-image {{ source `packerImageVersion` }})
     spec:
