--- a/updatecli/updatecli.d/charts/jenkins-infra-and-release-securitygroups.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-infra-and-release-securitygroups.yaml
@@ -42,7 +42,7 @@ targets:
     kind: file
     sourceid: getNewJenkinsInfraSecurityGroup
     spec:
-      file: config/ext_jenkins-infra.yaml
+      file: config/ext_jenkins-infra__common.yaml
       matchpattern: 'securityGroups: ".*"'
       replacepattern: 'securityGroups: "{{ source `getNewJenkinsInfraSecurityGroup` }}"'
     scmid: default
@@ -56,9 +56,9 @@ targets:
       replacepattern: 'securityGroups: "{{ source `getNewJenkinsReleaseSecurityGroup` }}"'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump Security Groups on Jenkins Infra and Release
     spec:
