--- a/updatecli/updatecli.d/charts/jenkins-jobs.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-jobs.yaml
@@ -26,15 +26,15 @@ targets:
     kind: file
     spec:
       files:
-        - clusters/privatek8s.yaml
+        # - clusters/privatek8s.yaml
         - clusters/temp-privatek8s.yaml
       matchpattern: 'chart: jenkins-infra\/jenkins-jobs((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jenkins-infra/jenkins-jobs${1}version: {{ source "lastChartVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump `jenkins-jobs` helm chart version to {{ source "lastChartVersion" }}
     spec:
