--- a/config/ext_private-nginx-ingress_privatek8s.yaml
+++ b/config/ext_private-nginx-ingress_privatek8s.yaml
@@ -1,5 +1,5 @@
 controller:
   service:
     annotations:
-      # azurerm_subnet.privatek8s_tier in https://github.com/jenkins-infra/azure/blob/main/privatek8s.tf
-      service.beta.kubernetes.io/azure-load-balancer-internal-subnet: privatek8s-tier
+      # azure-net:vnets.tf/private-vnet-data-tier
+      service.beta.kubernetes.io/azure-load-balancer-internal-subnet: private-vnet-data-tier
