--- a/config/plugin-health-scoring.yaml
+++ b/config/plugin-health-scoring.yaml
@@ -22,4 +22,5 @@ config:
   github:
     # https://github.com/apps/plugins-health-scoring
     appId: 281243
-    appInstallationName: Plugins Health Scoring
+    # app owner
+    appInstallationName: jenkinsci
