--- a/config/ldap.yaml
+++ b/config/ldap.yaml
@@ -18,6 +18,7 @@ service:
     - '44.240.22.235/32' # Accept inbound connections from Linux Foundation prod machine
     - '20.75.10.224/29' # Accept inbound connections from publick8s public IPs
     - '20.72.105.159/32' # Accept inbound connections from temp-privatek8s
+    - '20.96.66.246/32' # Accept inbound connections from privatek8s # TODO: find out how to retrieve this IP from terraform
     - '18.214.241.149/32' # JFrog Public Nat IP for AWS us-east-1 (https://jfrog.com/knowledge-base/what-are-artifactory-cloud-nated-ips/)
     - '34.201.191.93/32' # JFrog Public Nat IP for AWS us-east-1 (https://jfrog.com/knowledge-base/what-are-artifactory-cloud-nated-ips/)
     - '34.233.58.83/32' # JFrog Public Nat IP for AWS us-east-1 (https://jfrog.com/knowledge-base/what-are-artifactory-cloud-nated-ips/)
