--- a/config/ext_jenkins-infra_privatek8s.yaml
+++ b/config/ext_jenkins-infra_privatek8s.yaml
@@ -57,7 +57,7 @@ controller:
           clouds:
             - kubernetes:
                 containerCapStr: "100"
-                # Kubernetes internal URL to stay within private networks
+                #  Controller URL to alllow agent to connect to it. Prefers using the Kubernetes Service as an internal URL.
                 jenkinsUrl: "http://jenkins-infra.jenkins-infra.svc.cluster.local:8080"
                 maxRequestsPerHostStr: "300"
                 webSocket: true
