--- a/clusters/privatek8s.yaml
+++ b/clusters/privatek8s.yaml
@@ -51,6 +51,7 @@ releases:
     chart: jenkins/jenkins
     version: 4.2.21
     needs:
+      - jenkins-infra-additional # Required to allow the Jenkins controller to spawn kubernetes pods in the current cluster
       ## TODO: uncomment the following line when switching from temp-privatek8s to privatek8s
       # - jenkins-jobs # Required to generate the job definition in a configmap
       - public-nginx-ingress/public-nginx-ingress # Required to expose the webhooks endpoint (secondary ingress of the jenkins helm chart)
@@ -65,9 +66,7 @@ releases:
     chart: jenkins-infra/jenkins-additional
     version: 0.0.3
     values:
-    - ../config/jenkins-infra-additional.yaml
-    secrets:
-      - "../secrets/config/jenkins-infra/jenkins.yaml"
+      - ../config/jenkins-infra-additional.yaml
   - name: jenkins-infra-agents
     needs:
       - default/docker-registry-secrets
