--- a/clusters/privatek8s.yaml
+++ b/clusters/privatek8s.yaml
@@ -67,6 +67,14 @@ releases:
     version: 0.0.3
     values:
       - ../config/jenkins-infra-additional.yaml
+  - name: jenkins-infra-agents
+    namespace: jenkins-infra-agents
+    chart: jenkins-infra/jenkins-kubernetes-agents
+    version: 0.4.0
+    values:
+      - "../config/jenkins-kubernetes-agents.yaml"
+    secrets:
+      - "../secrets/config/jenkins-kubernetes-agents/secrets.yaml"
   ## TODO: uncomment the following line when switching from temp-privatek8s to privatek8s
   # - name: jenkins-jobs
   #   namespace: jenkins-infra
