--- a/updatecli/updatecli.d/charts/jenkins-infra-jobs.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-infra-jobs.yaml
@@ -26,8 +26,7 @@ targets:
     kind: file
     spec:
       files:
-        # - clusters/privatek8s.yaml
-        - clusters/temp-privatek8s.yaml
+        - clusters/privatek8s.yaml
       matchpattern: 'chart: jenkins-infra\/jenkins-jobs((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jenkins-infra/jenkins-jobs${1}version: {{ source "lastChartVersion" }}'
     scmid: default
