--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -1,15 +1,15 @@
 serviceAccount:
   create: true
-  name: jenkins-controller
+  name: jenkins-infra-controller
 serviceAccountAgent:
-  create: true
-  name: jenkins-agent
+  create: false
 rbac:
   create: true
   readSecrets: true
 persistence:
   enabled: true
   size: 50Gi
+  storageClass: managed-csi-premium-retain
 agent:
   componentName: "agent"
 networkPolicy:
