--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -133,6 +133,10 @@ jobsDefinition:
             fileName: "kubeconfig"
             description: "Kubeconfig file for prodpublick8s"
             secretBytes: "${base64:${KUBECONFIG_PRODPUBLICK8S}}"
+          kubeconfig-publick8s:
+            fileName: "kubeconfig"
+            description: "Kubeconfig file for publick8s"
+            secretBytes: "${base64:${KUBECONFIG_PUBLICK8S}}"
       helm-charts:
         name: Helm Charts
         description: Custom Helm Charts of the Jenkins Infra
