--- a/updatecli/updatecli.d/charts/datadog.yaml
+++ b/updatecli/updatecli.d/charts/datadog.yaml
@@ -33,6 +33,7 @@ targets:
         - clusters/eks-public.yaml
         - clusters/privatek8s.yaml
         - clusters/prodpublick8s.yaml
+        - clusters/publick8s.yaml
       matchpattern: 'chart: datadog\/datadog((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: datadog/datadog${1}version: {{ source "lastChartVersion" }}'
 
