--- a/clusters/publick8s.yaml
+++ b/clusters/publick8s.yaml
@@ -7,6 +7,12 @@ repositories:
   # https://github.com/DataDog/helm-charts/
   - name: datadog
     url: https://helm.datadoghq.com
+  # https://github.com/jenkins-infra/helm-charts/
+  - name: jenkins-infra
+    url: https://jenkins-infra.github.io/helm-charts
+  # https://github.com/cert-manager/cert-manager/
+  - name: jetstack
+    url: https://charts.jetstack.io
 releases:
   - name: datadog
     namespace: datadog
@@ -17,3 +23,20 @@ releases:
       - "../config/ext_datadog_publick8s.yaml"
     secrets:
       - "../secrets/config/datadog/publick8s-secrets.yaml"
+  - name: cert-manager
+    namespace: cert-manager
+    chart: jetstack/cert-manager
+    version: v1.11.0
+    set:
+      - name: installCRDs
+        value: true
+  - name: acme
+    namespace: cert-manager
+    chart: jenkins-infra/acme
+    version: 0.1.2
+    needs:
+      - cert-manager
+    values:
+      - "../config/acme.yaml"
+    secrets:
+      - "../secrets/config/acme/secrets.yaml"
