--- a/config/ext_public-nginx-ingress_publick8s.yaml
+++ b/config/ext_public-nginx-ingress_publick8s.yaml
@@ -6,3 +6,4 @@ controller:
     # azurerm_public_ip.publick8s_ipv4.ip_address in https://github.com/jenkins-infra/azure/blob/main/privatek8s.tf
     loadBalancerIP: 20.15.118.70
     externalTrafficPolicy: Local
+    ipFamilyPolicy: PreferDualStack
