--- a/clusters/publick8s.yaml
+++ b/clusters/publick8s.yaml
@@ -9,6 +9,7 @@ repositories:
     url: https://helm.datadoghq.com
   # https://github.com/kubernetes/ingress-nginx/
   - name: ingress-nginx
+    url: https://kubernetes.github.io/ingress-nginx
   # https://github.com/jenkins-infra/helm-charts/
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
