feat(publick8s): add artifact-caching-proxy

--- a/config/artifact-caching-proxy_azure.yaml
+++ b/config/artifact-caching-proxy_azure.yaml
@@ -10,6 +10,6 @@ ingress:
         - repo.azure.jenkins.io
 
 persistence:
-  storageClass: managed-csi-premium
+  storageClass: managed-csi-premium-retain
 
 replicaCount: 2
