--- a/updatecli/updatecli.d/charts/artifact-caching-proxy.yaml
+++ b/updatecli/updatecli.d/charts/artifact-caching-proxy.yaml
@@ -29,7 +29,7 @@ targets:
       files:
         - clusters/doks-public.yaml
         - clusters/eks-public.yaml
-        - clusters/prodpublick8s.yaml
+        - clusters/publick8s.yaml
       matchpattern: 'chart: jenkins-infra\/artifact-caching-proxy((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jenkins-infra/artifact-caching-proxy${1}version: {{ source "lastChartVersion" }}'
 
