--- a/clusters/publick8s.yaml
+++ b/clusters/publick8s.yaml
@@ -64,3 +64,14 @@ releases:
     namespace: falco
     chart: falco/falco
     version: 2.5.2
+  - name: artifact-caching-proxy
+    namespace: artifact-caching-proxy
+    chart: jenkins-infra/artifact-caching-proxy
+    version: 0.8.0
+    needs:
+      - public-nginx-ingress/public-nginx-ingress # Required to expose the proxy
+    values:
+      - "../config/artifact-caching-proxy__common.yaml"
+      - "../config/artifact-caching-proxy_azure.yaml"
+    secrets:
+      - "../secrets/config/artifact-caching-proxy/secrets.yaml"
