--- a/updatecli/updatecli.d/charts/cert-manager.yaml
+++ b/updatecli/updatecli.d/charts/cert-manager.yaml
@@ -29,6 +29,8 @@ targets:
         - clusters/privatek8s.yaml
         - clusters/prodpublick8s.yaml
         - clusters/publick8s.yaml
+        - clusters/eks-public.yaml
+        - clusters/doks-public.yaml
       matchpattern: 'chart: jetstack\/cert-manager((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jetstack/cert-manager${1}version: {{ source "lastChartVersion" }}'
     scmid: default
