fix(eks-public/doks-public): upgrade cert-manager version to v1.11.0 (#3517)
Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

--- a/updatecli/updatecli.d/charts/cert-manager.yaml
+++ b/updatecli/updatecli.d/charts/cert-manager.yaml
@@ -26,6 +26,8 @@ targets:
     kind: file
     spec:
       files:
+        - clusters/doks-public.yaml
+        - clusters/eks-public.yaml
         - clusters/privatek8s.yaml
         - clusters/prodpublick8s.yaml
         - clusters/publick8s.yaml
