--- a/clusters/privatek8s.yaml
+++ b/clusters/privatek8s.yaml
@@ -7,6 +7,9 @@ repositories:
   # https://github.com/DataDog/helm-charts/
   - name: datadog
     url: https://helm.datadoghq.com
+  # https://github.com/timja/github-comment-ops/
+  - name: github-comment-ops
+    url: https://timja.github.io/github-comment-ops/
   # https://github.com/kubernetes/ingress-nginx/
   - name: ingress-nginx
     url: https://kubernetes.github.io/ingress-nginx
