--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -13,6 +13,9 @@ repositories:
   # https://github.com/aws/eks-charts/
   - name: eks
     url: https://aws.github.io/eks-charts
+  # https://github.com/falcosecurity/charts/
+  - name: falco
+    url: https://falcosecurity.github.io/charts
   # https://github.com/jenkins-infra/helm-charts/
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
@@ -67,3 +70,7 @@ releases:
     version: 0.20.3
     values:
       - "../config/ext_aws-node-termination-handler_cik8s.yaml"
+  - name: falco
+    namespace: falco
+    chart: falco/falco
+    version: 2.5.2
