--- a/clusters/doks-public.yaml
+++ b/clusters/doks-public.yaml
@@ -7,6 +7,9 @@ repositories:
   # https://github.com/DataDog/helm-charts/
   - name: datadog
     url: https://helm.datadoghq.com
+  # https://github.com/falcosecurity/charts/
+  - name: falco
+    url: https://falcosecurity.github.io/charts
   # https://github.com/kubernetes/ingress-nginx/
   - name: ingress-nginx
     url: https://kubernetes.github.io/ingress-nginx
@@ -70,3 +73,7 @@ releases:
       - "../config/artifact-caching-proxy_do.yaml"
     secrets:
       - "../secrets/config/artifact-caching-proxy/secrets.yaml"
+  - name: falco
+    namespace: falco
+    chart: falco/falco
+    version: 2.5.2
