fix(eks-public) correct ACP and public-ingress configuration to follow cert-manager recommendations https://cert-manager.io/docs/installation/upgrading/ingress-class-compatibility/
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/artifact-caching-proxy_aws.yaml
+++ b/config/artifact-caching-proxy_aws.yaml
@@ -1,4 +1,7 @@
 ingress:
+  enabled: true
+  annotations:
+    acme.cert-manager.io/http01-edit-in-place: "true"
   hosts:
     - host: repo.aws.jenkins.io
       paths:
