--- a/clusters/doks-public.yaml
+++ b/clusters/doks-public.yaml
@@ -59,6 +59,7 @@ releases:
     version: 4.4.2
     values:
       - "../config/ext_public-nginx-ingress__common.yaml"
+      - "../config/ext_public-nginx-ingress_doks-public.yaml"
   - name: artifact-caching-proxy
     namespace: artifact-caching-proxy
     chart: jenkins-infra/artifact-caching-proxy
