--- a/config/artifact-caching-proxy_do.yaml
+++ b/config/artifact-caching-proxy_do.yaml
@@ -1,4 +1,6 @@
 ingress:
+  annotations:
+    acme.cert-manager.io/http01-edit-in-place: "true"
   hosts:
     - host: repo.do.jenkins.io
       paths:
