feat(cik8s,eks-public) enable HA for autoscaler (2 replicas) and set up topology awareness to ensure scaling on same AZs as EBS persistent volumes
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/artifact-caching-proxy_aws.yaml
+++ b/config/artifact-caching-proxy_aws.yaml
@@ -12,7 +12,7 @@ ingress:
         - repo.aws.jenkins.io
 
 persistence:
-  storageClass: ebs-sc
+  storageClass: ebs-sc-az1-retain
   ## TODO: find a way to helmfile apply this YAML storageclass definition
   ##########
   # apiVersion: storage.k8s.io/v1
