--- a/config/ext_jenkins-release.yaml
+++ b/config/ext_jenkins-release.yaml
@@ -31,10 +31,10 @@ controller:
     resources:
         limits:
             cpu: "2"
-            memory: "4Gi"
+            memory: "8Gi"
         requests:
             cpu: "2"
-            memory: "4Gi"
+            memory: "8Gi"
     probes:
         startupProbe:
             initialDelaySeconds: 120
@@ -50,7 +50,7 @@ controller:
     overwritePlugins: true
     serviceType: "ClusterIP"
     javaOpts: >
-        -XshowSettings:vm -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled -XX:+DisableExplicitGC -XX:MaxRAM=4g -XX:+AlwaysPreTouch -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/ -XX:+UseG1GC -Dorg.csanchez.jenkins.plugins.kubernetes.pipeline.ContainerExecDecorator.websocketConnectionTimeout=60
+        -XshowSettings:vm -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/ -XX:+UseG1GC -Djava.net.preferIPv4Stack=true
 
     JCasC:
         enabled: true
