--- a/config/ext_public-nginx-ingress_prodpublick8s.yaml
+++ b/config/ext_public-nginx-ingress_prodpublick8s.yaml
@@ -3,7 +3,7 @@ controller:
   service:
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-internal: false
+      service.beta.kubernetes.io/azure-load-balancer-ipv4: 52.167.253.43
       prometheus.io/scrape: "true"
       prometheus.io/port: "10254"
-    loadBalancerIP: 52.167.253.43
     externalTrafficPolicy: Local
