--- a/config/ext_public-nginx-ingress_publick8s.yaml
+++ b/config/ext_public-nginx-ingress_publick8s.yaml
@@ -3,7 +3,7 @@ controller:
   service:
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-internal: false
-    # azurerm_public_ip.publick8s_ipv4.ip_address in https://github.com/jenkins-infra/azure/blob/main/privatek8s.tf
-    loadBalancerIP: 20.119.232.75
+      # azurerm_public_ip.publick8s_ipv4.ip_address in https://github.com/jenkins-infra/azure/blob/main/publick8s.tf
+      service.beta.kubernetes.io/azure-load-balancer-ipv4: 20.119.232.75
     externalTrafficPolicy: Local
     ipFamilyPolicy: PreferDualStack
